# ESP_IDF

smartlightVENV/Smartlight/ESP-IDF/sample_project/: sdkconfig
smartlightVENV/Smartlight/ESP-IDF/sample_project/main/: CMakeLists.txt  main.cpp
smartlightVENV/Smartlight/ESP-IDF/sample_project/main/include/: AWS_funcs.cpp  AWS_funcs.h  connect.h  dali.cpp  spi_comms.h
