idf_component_register(SRCS "main.cpp" 
                            "include/spi_comms.cpp" 
                            "include/AWS_funcs.cpp" 
                            "include/dali.cpp" 
                            "include/OTA.cpp" 
                            "include/SPIFFS.cpp"

                    INCLUDE_DIRS "." "include")
